# DeepThinkingFlow-computer-vision

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE_POLICY.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VENDOR_POLICY.md  constraints-benchmark.txt  constraints-dev.txt  constraints-train-cpu.txt  pyproject.toml
.github/workflows/: ci.yml  heavy-runtime.yml
configs/: baseline.yolo.clean_gpu.yaml  baseline.yolo.evidence_cpu.yaml  baseline.yolo.person_car_gpu.yaml  baseline.yolo.yaml  dataset.example.yaml  deploy.yaml  problem.coco2_reliable.yaml  problem.yaml
docs/: ARCHITECTURE.md  REFACTOR_PLAN.md
native/dtflowcv_native/: Cargo.toml  README.md  build.rs
native/dtflowcv_native/c/: hwinfo.c  hwinfo.h  preprocess.c  preprocess.h
native/dtflowcv_native/src/: lib.rs
notebooks/: colab_person_car_gpu_baseline.ipynb
reports/benchmarks/: README.md
scripts/: benchmark_preprocess.py  bootstrap_demo_dataset.py  compare_ultralytics_native_preprocess.py  make_dataset_review_sheet.py  make_error_contact_sheet.py  native_kernel_perf_driver.py  verify_native_preprocess.py  verify_native_yolo_e2e.py
src/dtflowcv/: __main__.py  benchmark.py  cli.py  coco.py  config.py  data_card.py  dataset.py  demo.py  deploy.py  deps.py  errors.py  evaluate.py  export.py  health.py  infer.py  inference_benchmark.py  metrics.py  motion.py  native.py  predict.py  preprocess.py  profile.py  specs.py  tracking.py  train.py  video.py  visualize.py  yolo.py
src/dtflowcv/commands/: __init__.py  app.py  data.py  emit.py  eval.py  license.py  model.py  runtime.py  system.py
src/dtflowcv/core/: __init__.py  config.py  dependency.py  hashing.py  jsonio.py  license_check.py  paths.py  schema.py  status.py  vendor.py
src/dtflowcv/data/: __init__.py  audit.py  cards.py  coco.py  demo.py  duplicates.py  leakage.py  records.py  registry.py  reports.py  split.py  stats.py  types.py  yolo.py
src/dtflowcv/evaluation/: __init__.py  ap.py  coco_ap.py  confusion.py  errors.py  evaluator.py  iou.py  pr_curves.py  report.py  slices.py  types.py
src/dtflowcv/models/: __init__.py  backend.py  downloader.py  export.py  export_validate.py  onnxruntime_backend.py  predict.py  promotion.py  registry.py  train.py  ultralytics_backend.py
src/dtflowcv/reports/: __init__.py  benchmark.py  dataset_card.py  model_card.py
src/dtflowcv/runtime/: __init__.py  benchmark.py  image_inference.py  motion.py  native.py  preprocess.py  tracking.py  video_inference.py  video_io.py  visualization.py
tests/: test_architecture_imports.py  test_backend_abstraction.py  test_benchmark_contract.py  test_coco_prepare.py  test_dataset_pipeline.py  test_evaluate_and_profile.py  test_metrics.py  test_new_modules.py  test_optional_dependency_contracts.py  test_predict_contract.py  test_specs.py  test_train_contracts.py  test_yolo_contracts.py
tests/commands/: test_cli_model.py
tests/models/: test_model_downloader_no_auto_download.py  test_model_registry.py
tools/hwinfo/: HardwareProfiler.java  Makefile  hwcheck.sh  hwguide_standalone.c
(+6 files in other folders)
