[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dtflow-cv"
version = "0.2.0"
description = "Computer-vision data science pipeline with dataset audit, baseline training, evaluation, profiling, and native preprocessing contracts."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26",
  "Pillow>=10",
  "PyYAML>=6",
  "typer>=0.12",
]

[project.optional-dependencies]
train = [
  "mlflow>=2.12",
  "torch>=2.2",
  "ultralytics>=8.2",
]
video = [
  "opencv-python>=4.9",
]
viz = [
  "opencv-python>=4.9",
  "matplotlib>=3.8",
]
export = [
  "onnx>=1.16",
  "onnxruntime>=1.17",
  "torch>=2.2",
  "ultralytics>=8.2",
]
deploy = [
  "onnxruntime>=1.17",
  "opencv-python>=4.9",
]
analysis = [
  "opencv-python>=4.9",
  "matplotlib>=3.8",
  "pandas>=2.2",
]
native = [
  "maturin>=1.7",
]
benchmark = [
  "opencv-python>=4.9",
  "matplotlib>=3.8",
]
dev = [
  "pip-licenses>=5.5.5",
  "pytest>=8",
  "ruff>=0.5",
]
all = [
  "matplotlib>=3.8",
  "mlflow>=2.12",
  "maturin>=1.7",
  "onnx>=1.16",
  "onnxruntime>=1.17",
  "opencv-python>=4.9",
  "pandas>=2.2",
  "torch>=2.2",
  "ultralytics>=8.2",
]

[project.scripts]
dtflowcv = "dtflowcv.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dtflowcv = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
