[package]
name = "dtflowcv_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "dtflowcv_native"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.27"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py311"] }

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
